--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ h1 {
 /* Section Title*/
 .section-title {
   position: relative;
+  margin-bottom: 5rem;
 }
 
 h2.section-title-heading {
@@ -153,11 +154,12 @@ h2.section-title-heading {
 }
 
 .image-box img {
-  width: 85%;
+  width: 80%;
   position: absolute;
-  top: -1rem;
-  left: 12rem;
+  top: 1rem;
+  left: 11rem;
   z-index: 1;
+  overflow: hidden;
 }
 
 /* ================= ABOUT ================= */
@@ -242,9 +244,9 @@ h2.section-title-heading {
     ),
     url('../img/bkg-download.jpg');
 
-  /* background-size: fill; */
-  /* background-repeat: no repeat; */
-  padding: 8rem 0 7rem 0;
+  background-size: fill;
+  background-repeat: no repeat;
+  padding: 8rem 0;
   position: relative;
 }
 
@@ -253,14 +255,14 @@ h2.section-title-heading {
   position: absolute;
   background-color: #fafafa;
   width: 100%;
-  height: 15%;
+  height: 20%;
   transform: skewY(-2deg);
   -webkit-transform: skewY(-2deg);
   -moz-transform: skewY(-2deg);
   -ms-transform: skewY(-2deg);
   -o-transform: skewY(-2deg);
   transform-origin: top right;
-  top: -3rem;
+  top: -4rem;
   right: 0;
   left: 0;
 }
@@ -284,4 +286,131 @@ h2.section-title-heading {
 
 #download .download-btns i {
   padding-right: 0.2rem;
+}
+
+/* ================= PRICING ================= */
+#pricing {
+  padding-bottom: 7rem;
+  position: relative;
+}
+
+#pricing::before {
+  content: '';
+  position: absolute;
+  background-color: #ffff;
+  width: 100%;
+  height: 20%;
+  transform: skewY(-2deg);
+  -webkit-transform: skewY(-2deg);
+  -moz-transform: skewY(-2deg);
+  -ms-transform: skewY(-2deg);
+  -o-transform: skewY(-2deg);
+  transform-origin: top right;
+  top: -4rem;
+  right: 0;
+  left: 0;
+}
+
+#pricing .section-title {
+  /* margin-bottom: 5rem; */
+}
+
+#pricing .pricing-table {
+  background-color: #ffff;
+  box-shadow: -1px 0px 12px 4px rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: -1px 0px 12px 4px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: -1px 0px 12px 4px rgba(0, 0, 0, 0.24);
+  -o-box-shadow: -1px 0px 12px 4px rgba(0, 0, 0, 0.24);
+  margin-right: 1rem;
+  width: calc(90% / 3);
+  padding: 0;
+  border-radius: 2rem;
+  -webkit-border-radius: 2rem;
+  -moz-border-radius: 2rem;
+  -ms-border-radius: 2rem;
+  -o-border-radius: 2rem;
+}
+
+#pricing .pricing-table .table-header h4 {
+  color: var(--section-title-color-dark);
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+#pricing .pricing-table .table-content {
+  margin-top: 2rem;
+}
+
+#pricing .pricing-table .table-content ul li {
+  list-style: none;
+  text-align: center;
+  padding-bottom: 1rem;
+  font-weight: 600;
+}
+
+#pricing .pricing-table .table-footer {
+  margin-top: 2rem;
+  padding-bottom: 3rem;
+}
+
+#pricing .pricing-table .table-footer a {
+  background: linear-gradient(
+    to right,
+    rgba(0, 172, 217, 0.62),
+    rgba(105, 240, 174, 0.52)
+  );
+  padding: 0.5rem 2rem;
+  border-radius: 2rem;
+  -webkit-border-radius: 2rem;
+  -moz-border-radius: 2rem;
+  -ms-border-radius: 2rem;
+  -o-border-radius: 2rem;
+  color: #ffff;
+  font-weight: 600;
+}
+
+#pricing .pricing-table .table-footer a:hover {
+  text-decoration: none;
+  background: #ffff;
+  color: var(--main-accent-color);
+  border: 2px solid var(--main-accent-color);
+  transition: all 0.8s ease-out;
+  -webkit-transition: all 0.8s ease-out;
+  -moz-transition: all 0.8s ease-out;
+  -ms-transition: all 0.8s ease-out;
+  -o-transition: all 0.8s ease-out;
+}
+
+#pricing .table-header {
+  margin: 0;
+  width: 100%;
+}
+
+#pricing .pricing-table .table-header {
+  padding: 3rem 0 2rem 0;
+}
+
+#pricing .pricing-table:nth-child(2) .table-header {
+  background: linear-gradient(
+    to right,
+    rgba(0, 172, 217, 0.62),
+    rgba(105, 240, 174, 0.52)
+  );
+  padding: 3rem 0 2rem 0;
+  color: #ffff;
+  position: relative;
+  border-top-left-radius: 2rem;
+  border-top-right-radius: 2rem;
+}
+
+#pricing .pricing-table:nth-child(2) .table-header img {
+  position: absolute;
+  top: 7px;
+  left: 4px;
+  width: 15%;
+}
+
+#pricing .pricing-table:nth-child(2) .table-header h4 {
+  color: #ffff;
 }
