--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,11 @@ h2.section-title-heading {
   color: #27778b;
 }
 
+.navbar.active {
+  background-color: rgba(0, 172, 217, 0.7);
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
 /* ================= HERO ================= */
 /* .hero-img {
   transform: skewX(-15deg);
@@ -154,7 +159,7 @@ h2.section-title-heading {
 }
 
 .image-box img {
-  width: 80%;
+  width: 75%;
   position: absolute;
   top: 1rem;
   left: 11rem;
