--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,6 +236,12 @@ h2.section-title-heading {
 
 #features .feature-img img {
   padding-bottom: 1rem;
+  max-width: 180% !important;
+  transform: translate(-22.5%, -1%);
+  -webkit-transform: translate(-22.5%, -1%);
+  -moz-transform: translate(-22.5%, -1%);
+  -ms-transform: translate(-22.5%, -1%);
+  -o-transform: translate(-22.5%, -1%);
 }
 
 #features .feature-block p {
