Adjusted margin for the last pricing-table

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -33,7 +33,7 @@
     margin-right: auto;
   }
 
-  #pricing .pricing-table:nth-child(3) {
+  #pricing .pricing-table:last-child {
     margin-bottom: -1rem;
   }
 }
